--- a/naver/naver.html
+++ b/naver/naver.html
@@ -62,7 +62,7 @@
         <li>속보) 방송종료하고 싶어</li>
         <li>중대발표 : 다음 강좌 언제 될지 모르겠다.</li>
       </ol>
-      <h3>언론사 목록</h3>
+      <h3>언론사 목록.</h3>
       <ul>
         <li><img src="NEWSIS.png" alt="NEWSIS" /></li>
         <li><img src="프레시안.png" alt="프레시안" /></li>
