--- a/naver/naver.html
+++ b/naver/naver.html
@@ -38,7 +38,9 @@
           <fieldset>
             <legend class="blind">검색</legend>
             <input /><!--짧은 text, input은 바로 종료태그 써주는 습관 들이기-->
-            <button class="blind">검색</button>
+            <button>
+              <span class="blind">검색</span> <span id="search-image"></span>
+            </button>
           </fieldset>
         </div>
       </div>
@@ -62,7 +64,7 @@
         <li>속보) 방송종료하고 싶어</li>
         <li>중대발표 : 다음 강좌 언제 될지 모르겠다.</li>
       </ol>
-      <h3>언론사 목록.</h3>
+      <h3>언론사 목록</h3>
       <ul>
         <li><img src="NEWSIS.png" alt="NEWSIS" /></li>
         <li><img src="프레시안.png" alt="프레시안" /></li>
