--- a/naver/naver.html
+++ b/naver/naver.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <div id="header-center">
+      <div class="center-align">
         <!--
         <div style="display: inline-block;">네이버를 시작페이지로</div>
         <div style="display: inline-block;">쥬니어네이버</div>
@@ -46,15 +46,31 @@
       </div>
     </header>
     <nav>
-      <ul>
-        <li>메일</li>
-        <li>카페</li>
-        <li>블로그</li>
-        <li>지식인</li>
-        <li>쇼핑</li>
-        <li>네이버페이</li>
-        <li>네이버쇼핑</li>
-      </ul>
+      <div class="center-align">
+        <ul>
+          <li>
+            <a href=""><span></span><span class="blind">메일</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">카페</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">블로그</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">지식인</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">쇼핑</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">네이버페이</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">네이버tv</span></a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <main>
       <h2>실시간 검색어</h2>
