naver_start_logo

--- a/naver/naver.html
+++ b/naver/naver.html
@@ -17,10 +17,10 @@
         <div style="display: inline-block;">쥬니어네이버</div>
         <div style="display: inline-block;">해피빈</div>
         -->
-        <div>
-          <span>네이버를 시작페이지로</span>
-          <span>쥬니어네이버</span>
-          <span>해피빈</span>
+        <div id="header-top">
+          <a href="" class="link-set">네이버를 시작페이지로 </a>
+          <a href=""><span class="blind">쥬니어네이버</span></a>
+          <a href=""><span class="blind">해피빈</span></a>
         </div>
 
         <div id="header-search">
