--- a/naver/naver.html
+++ b/naver/naver.html
@@ -46,7 +46,12 @@
       </div>
     </header>
     <nav>
-      <div class="center-align">
+      <div class="center-align relative">
+        <div id="search-ranking">
+          <h2 class="blind">실시간 검색어</h2>
+          <span id="rank-number">1</span>
+          <span id="rank-title">제로초</span>
+        </div>
         <ul>
           <li>
             <a href=""><span></span><span class="blind">메일</span></a>
@@ -70,10 +75,11 @@
             <a href=""><span></span><span class="blind">네이버tv</span></a>
           </li>
         </ul>
+        <div class="nav-divider"></div>
       </div>
     </nav>
     <main>
-      <h2>실시간 검색어</h2>
+      <div class="center-align"></div>
       <h3>연합뉴스</h3>
       <ol>
         <li>충격) 제초로 지금 목아파.....</li>
