--- a/naver/naver.html
+++ b/naver/naver.html
@@ -37,7 +37,7 @@
           <h2>검색창</h2>
           <fieldset>
             <legend class="blind">검색</legend>
-            <input /><!--짧은 text, input은 바로 종료태그 써주는 습관 들이기-->
+            <input /><!--짧은 text, input은 바로 종료태그 써주는 습관 들이기.-->
             <button>
               <span class="blind">검색</span> <span id="search-image"></span>
             </button>
