--- a/naver/naver.html
+++ b/naver/naver.html
@@ -38,6 +38,8 @@
           <fieldset>
             <legend class="blind">검색</legend>
             <input /><!--짧은 text, input은 바로 종료태그 써주는 습관 들이기.-->
+            <span id="search-keybord"></span>
+            <span id="search-history"></span>
             <button>
               <span class="blind">검색</span> <span id="search-image"></span>
             </button>
@@ -74,8 +76,37 @@
           <li>
             <a href=""><span></span><span class="blind">네이버tv</span></a>
           </li>
+          <li>
+            <a href=""><span></span><span class="blind">사전</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">뉴스</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">증권</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">부동산</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">지도</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">VIBE</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">도서</span></a>
+          </li>
+          <li>
+            <a href=""><span></span><span class="blind">웹툰</span></a>
+          </li>
         </ul>
         <div class="nav-divider"></div>
+        <!-- <ul>
+          <li>
+            <a href=""><span></span><span class="blind">더보기</span></a>
+          </li>
+        </ul> -->
       </div>
     </nav>
     <main>
