--- a/naver/naver.html
+++ b/naver/naver.html
@@ -103,7 +103,7 @@
         </ul>
         <div class="nav-divider"></div>
         <ul>
-          <li>
+          <li class="more">
             <a href=""><span></span><span class="blind">더보기</span></a>
           </li>
         </ul>
