--- a/naver/naver.html
+++ b/naver/naver.html
@@ -110,23 +110,62 @@
       </div>
     </nav>
     <main>
-      <div class="center-align"></div>
-      <h3>연합뉴스</h3>
-      <ol>
-        <li>충격) 제초로 지금 목아파.....</li>
-        <li>속보) 방송종료하고 싶어</li>
-        <li>중대발표 : 다음 강좌 언제 될지 모르겠다.</li>
-      </ol>
-      <h3>언론사 목록</h3>
-      <ul>
-        <li><img src="NEWSIS.png" alt="NEWSIS" /></li>
-        <li><img src="프레시안.png" alt="프레시안" /></li>
-      </ul>
-      <h3>로그인</h3>
-      <h3>뉴스</h3>
-      <h3>법률</h3>
-      <h3>쇼핑</h3>
-      <h3>쇼핑</h3>
+      <div class="center-align">
+        <div>
+          <div id="main-ad"></div>
+          <div id="main-login">로그인</div>
+        </div>
+
+        <div>
+          <div id="main-ytn">
+            <h3>연합뉴스</h3>
+            <ol>
+              <li>충격) 제초로 지금 목아파.....</li>
+              <li>속보) 방송종료하고 싶어</li>
+              <li>중대발표 : 다음 강좌 언제 될지 모르겠다.</li>
+            </ol>
+          </div>
+          <div id="main-newsstand">
+            <h3>언론사 목록</h3>
+            <ul>
+              <li><img src="./과학동아.png" alt="과학동아" /></li>
+              <li><img src="./한국일보.png" alt="한국일보" /></li>
+              <li><img src="./osen.png" alt="osen" /></li>
+              <li><img src="./매일경제.png" alt="매일경제" /></li>
+              <li><img src="./파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+              <li><img src="./한국경제TV.png" alt="한국경제TV" /></li>
+              <li><img src="./과학동아.png" alt="과학동아" /></li>
+              <li><img src="./한국일보.png" alt="한국일보" /></li>
+              <li><img src="./osen.png" alt="osen" /></li>
+              <li><img src="./매일경제.png" alt="매일경제" /></li>
+              <li><img src="./파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+              <li><img src="./한국경제TV.png" alt="한국경제TV" /></li>
+              <li><img src="./과학동아.png" alt="과학동아" /></li>
+              <li><img src="./한국일보.png" alt="한국일보" /></li>
+              <li><img src="./osen.png" alt="osen" /></li>
+              <li><img src="./매일경제.png" alt="매일경제" /></li>
+              <li><img src="./파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+              <li><img src="./한국경제TV.png" alt="한국경제TV" /></li>
+            </ul>
+          </div>
+          <div id="main-weather"></div>
+          <div id="second-ad"></div>
+        </div>
+        <div>
+          <div>
+            <h3>주제별 보기</h3>
+          </div>
+          <div>
+            <h3>쇼핑</h3>
+          </div>
+        </div>
+        <div>
+          <div>
+            <h3>이벤트</h3>
+          </div>
+          <div id="main-third-ed"></div>
+        </div>
+      </div>
     </main>
     <footer>
       <div>공지사항</div>
