--- a/naver/naver.html
+++ b/naver/naver.html
@@ -110,7 +110,7 @@
       </div>
     </nav>
     <main>
-      <div class="center-align">
+      <div id="main-centered" class="center-align">
         <div>
           <div id="main-ad"></div>
           <div id="main-login">로그인</div>
@@ -149,21 +149,21 @@
             </ul>
           </div>
           <div id="main-weather"></div>
-          <div id="second-ad"></div>
+          <div id="main-second-ad"></div>
         </div>
         <div>
-          <div>
+          <div id="main-category">
             <h3>주제별 보기</h3>
           </div>
-          <div>
+          <div id="main-shpping">
             <h3>쇼핑</h3>
           </div>
         </div>
         <div>
-          <div>
+          <div id="main-event">
             <h3>이벤트</h3>
           </div>
-          <div id="main-third-ed"></div>
+          <div id="main-third-ad"></div>
         </div>
       </div>
     </main>
