--- a/naver/naver.html
+++ b/naver/naver.html
@@ -117,7 +117,7 @@
         </div>
 
         <div id="main-second-block">
-          <div class="inline-block">
+          <div class="float-left">
             <div id="main-ytn">
               <h3>연합뉴스</h3>
               <ol>
@@ -148,7 +148,7 @@
               </ul>
             </div>
           </div>
-          <div class="inline-block">
+          <div class="float-left">
             <!--세로로 두토막-->
             <div id="main-weather"></div>
             <div id="main-second-ad"></div>
