--- a/naver/naver.html
+++ b/naver/naver.html
@@ -159,7 +159,11 @@
             <h3>주제별 보기</h3>
           </div>
           <div id="main-shpping">
-            <h3>쇼핑</h3>
+            <iframe
+              src="https://castbox.shopping.naver.com/shopbox/main.nhn?"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
           </div>
         </div>
         <div id="main-fourth-block">
