--- a/naver_개념연습/z-index/naver.html
+++ b/naver_개념연습/z-index/naver.html
@@ -167,7 +167,10 @@ z-inner은 z-exmple의 자식
       <div id="main-centered" class="center-align">
         <div id="main-first-block">
           <div id="main-ad"></div>
-          <div id="main-login"><h3>로그인</h3></div>
+          <div id="main-login"><h3 class="'blind">로그인</h3>
+          <div class="login-wrapper">
+            <span></span>
+          </div>
         </div>
 
         <div id="main-second-block">
