--- a/naver/naver.html
+++ b/naver/naver.html
@@ -35,15 +35,22 @@
           </a>
 
           <h2>검색창</h2>
-          <fieldset>
-            <legend class="blind">검색</legend>
-            <input /><!--짧은 text, input은 바로 종료태그 써주는 습관 들이기.-->
-            <span id="search-keybord"></span>
-            <span id="search-history"></span>
-            <button>
-              <span class="blind">검색</span> <span id="search-image"></span>
-            </button>
-          </fieldset>
+          <form
+            class="inline-block"
+            action="https://search.naver.com/search.naver?sm=top_hty&fbm=0&ie=utf8&query="
+          >
+            <fieldset>
+              <legend class="blind">검색</legend>
+              <input /><!--짧은 text, input은 바로 종료태그 써주는 습관 들이기.-->
+              <span id="search-keybord"></span>
+              <span id="search-history"></span>
+              <!--검색을 누르면 다른 페이지로 넘어가는데 a태그가 아닌 button태그를 쓴 이유는?
+              -->
+              <button type="submit">
+                <span class="blind">검색</span> <span id="search-image"></span>
+              </button>
+            </fieldset>
+          </form>
         </div>
       </div>
     </header>
@@ -157,7 +164,25 @@
       <div id="main-centered" class="center-align">
         <div id="main-first-block">
           <div id="main-ad"></div>
-          <div id="main-login"><h3>로그인</h3></div>
+          <div id="main-login">
+            <h3 class="blind">로그인</h3>
+            <div class="login-wrapper">
+              <span class="login-text"
+                >네이버를 더 안전하고 편리하게 이용하세요.</span
+              >
+              <a
+                href="https://nid.naver.com/nidlogin.login?mode=form&url=https%3A%2F%2Fwww.naver.com"
+              >
+                <span class="blind">NAVER 로그인</span>
+                <span class="login-image"></span
+              ></a>
+              <a
+                class="login-signup"
+                href="https://nid.naver.com/nidregister.form?url=https%3A%2F%2Fwww.naver.com"
+                >회원가입</a
+              >
+            </div>
+          </div>
         </div>
 
         <div id="main-second-block">
