--- a/naver/naver.html
+++ b/naver/naver.html
@@ -5,6 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+    <link rel="stylesheet" href="./webfont.css" />
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic",
+          "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
+      }
+      /*h태그는 마진이 기본적으로 들어가있음. 그래서 미리 초기화 해놓고 시작하는 것이
+설정할때 헷갈리지 않는다.*/
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin: 0;
+      }
+      .inline-block {
+        display: inline-block;
+      }
+      .float-left {
+        float: left;
+      }
+    </style>
     <link rel="stylesheet" href="./naver.css" />
     <!--./:현재폴더-->
     <title>네이버</title>
