--- a/naver/naver.html
+++ b/naver/naver.html
@@ -192,7 +192,9 @@
     <main>
       <div id="main-centered" class="center-align">
         <div id="main-first-block">
-          <div id="main-ad"></div>
+          <div id="main-ad">
+            <img src="./ed1.jpg" width="740" height="120" />
+          </div>
           <div id="main-login">
             <h3 class="blind">로그인</h3>
             <div class="login-wrapper">
@@ -249,7 +251,9 @@
           <div class="float-left">
             <!--세로로 두토막-->
             <div id="main-weather"></div>
-            <div id="main-second-ad"></div>
+            <div id="main-second-ad">
+              <img src="./ed2.jpg" width="332" height="" 150px />
+            </div>
           </div>
         </div>
         <div id="main-third-block">
